--- a/vc-web/vc-web-front/src/main/resources/public/car/state/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/car/state/index.html
@@ -27,6 +27,7 @@
                 </select>
             </div>
         </div>
+        <div class="exportBtn">导出</div>
         <div class="seachBtn">查询</div>
     </div>
     <div class="tableBox">
