--- a/vc-web/vc-web-front/src/main/resources/public/car/state/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/car/state/index.html
@@ -161,6 +161,10 @@
                     getData(vin,days,1,10);
                 }
             });
+            //导出
+            $(".exportBtn").click(function(){
+                alert(1111)
+            })
         })
     </script>
 </body>
