--- a/vc-web/vc-web-front/src/main/resources/public/car/state/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/car/state/index.html
@@ -142,7 +142,7 @@
                                 pagenumber:1,
                                 totalpage:data.page.total,
                                 insertnode:function(data){
-                                    getData(vin,days,data-1,10);
+                                    getData(vin,days,data,10);
                                 }
                             })
                         }
